@@ -159,6 +159,7 @@ class RefreshSiteInfo extends AbstractCallback
 		// For the reasoning of this code see https://dev.mysql.com/doc/refman/5.7/en/lock-tables.html
 		$db->setQuery('COMMIT')->execute();
 		$db->unlockTables();
+		$db->setQuery('SET autocommit = 1')->execute();
 
 		return $siteIDs;
 	}
